--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+  <div id="board_container"></div>
+  <div id="message_container"></div>
   <script src="js/bundle.js"></script>
 </body>
 </html>
