--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
   <div id="board_container"></div>
   <div id="message_container"></div>
+  <script type="text/javascript" src="out/main.js"></script>
   <script src="js/bundle.js"></script>
 </body>
 </html>
