--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Tic-Tac-Toe</title>
   <link rel="stylesheet" href="style.css">
-  <script async defer src="../js/bundle.js"></script>
+  <script async defer src="main.js"></script>
 </head>
 <body>
-  <div id="board_container"></div>
-  <div id="message_container"></div>
+  <div id="board"></div>
 </body>
 </html>
